--- a/06 Ionic/02 UI/UIDemos/src/app/demos/infinite-scroll/infinite-scroll.page.html
+++ b/06 Ionic/02 UI/UIDemos/src/app/demos/infinite-scroll/infinite-scroll.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>continous-scroll</ion-title>
+    <ion-title>infinite-scroll</ion-title>
   </ion-toolbar>
 </ion-header>
 
