--- a/06 Ionic/06 Security/SecurityFirebase/src/app/home/home.page.html
+++ b/06 Ionic/06 Security/SecurityFirebase/src/app/home/home.page.html
@@ -13,7 +13,9 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content *ngIf="!loggedIn"> </ion-content>
+<ion-content *ngIf="!loggedIn">
+  <app-login></app-login>
+</ion-content>
 
 <ion-content *ngIf="loggedIn">
   <ion-list *ngFor="let menu of menuData">
