--- a/06 Ionic/06 Security/SecurityFirebase/src/app/home/home.page.html
+++ b/06 Ionic/06 Security/SecurityFirebase/src/app/home/home.page.html
@@ -15,6 +15,7 @@
 
 <ion-content *ngIf="!loggedIn">
   <app-login></app-login>
+  <app-register></app-register>
 </ion-content>
 
 <ion-content *ngIf="loggedIn">
