--- a/06 Ionic/06 Security/SecurityFirebase/src/app/auth/register/register.component.html
+++ b/06 Ionic/06 Security/SecurityFirebase/src/app/auth/register/register.component.html
@@ -1,3 +1,29 @@
-<p>
-  register works!
-</p>
+<ion-card>
+  <ion-item>
+    <ion-label floating color="primary">Display Name</ion-label>
+    <ion-input
+      type="email"
+      [(ngModel)]="reg.displayName"
+      name="displayName"
+    ></ion-input>
+  </ion-item>
+
+  <ion-item>
+    <ion-label floating color="primary">Email Address</ion-label>
+    <ion-input type="email" [(ngModel)]="reg.email" name="email"></ion-input>
+  </ion-item>
+
+  <ion-item>
+    <ion-label floating color="primary">Password</ion-label>
+    <ion-input type="password" [(ngModel)]="reg.pwd" name="pwd"></ion-input>
+  </ion-item>
+
+  <ion-item>
+    <ion-label floating color="primary">Re-type Password</ion-label>
+    <ion-input type="password" [(ngModel)]="reg.pwd2" name="pwd2"></ion-input>
+  </ion-item>
+  <ion-row style="height: 20px"></ion-row>
+  <ion-button color="secondary" expand="full" (click)="registerAcct()">
+    Register
+  </ion-button>
+</ion-card>
